# pong

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Game  Makefile  README.md  cmake_install.cmake
assets/: ball.v  paddle.v
shaders/: fragmentShader.GLSL  vertexShader.GLSL
src/: GameConfig.h  GameConfig.h.in  main.cpp
src/shaders/: fragmentShader.GLSL  vertexShader.GLSL
